--- a/ManageFoxV1/src/main/resources/application.properties
+++ b/ManageFoxV1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/maccess
 spring.datasource.username= root
 spring.datasource.password= Tiger
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.hibernate.properties.format-sql =true
 server.port =8080
 
